--- a/css/style.css
+++ b/css/style.css
@@ -17,3 +17,28 @@ a {
     width: 30px;
     margin: 15px;
 }
+
+.header{
+    display:flex;
+    justify-content:center;
+     background-color:#000000;
+     color:#ffffff;
+}
+
+.navbar{
+    display:block;
+    justify-content:space-between;
+    width:10%;
+    background-color:#FFB6C1;
+    height:100%;
+}
+
+a{
+    text-decoration: none;
+    color:#ffffff;
+}
+
+.head{
+    width:100%;
+    height:15%;
+}
