--- a/css/style.css
+++ b/css/style.css
@@ -19,11 +19,12 @@ a {
 }
 
 .header{
-    display:flex;
-    justify-content:center;
      background-color:#000000;
      color:#ffffff;
 }
+
+
+
 
 .navbar{
     display:block;
@@ -39,6 +40,23 @@ a{
 }
 
 .head{
+    width:50%;
+    height:10%;
+    padding-left:10%;
+}
+
+.menu{
+    width:20%;
+    height:20%;
+    left: 5%;
+    padding-top: 2%;
+}
+
+.homeimg{
     width:100%;
-    height:15%;
+ 
+}
+
+.main{
+background: url("jhenehome.jpg");
 }
